@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+    
+	<CheckBoxPreference
+		android:defaultValue="true"
+		android:key="pref_limitNumberOfPlayers"
+		android:title="@string/limit_number_of_players">
+	</CheckBoxPreference>
+
+</PreferenceScreen>
