@@ -1,0 +1,34 @@
+package com.geeksong.agricolascorer;
+
+import android.os.Bundle;
+import android.app.Activity;
+import android.support.v4.app.NavUtils;
+import android.view.MenuItem;
+
+public class SettingsActivity extends Activity {
+	public static String Pref_LimitNumberOfPlayers = "pref_limitNumberOfPlayers";
+	
+	@Override
+	protected void onCreate(Bundle savedInstanceState) {
+		super.onCreate(savedInstanceState);
+
+		setupActionBar();
+		
+		getFragmentManager().beginTransaction().replace(android.R.id.content, new SettingsFragment()).commit();
+	}
+
+	private void setupActionBar() {
+        ActionBarHelper.setActionBarTitle(this, R.string.settings);
+		getActionBar().setDisplayHomeAsUpEnabled(true);
+	}
+
+	@Override
+	public boolean onOptionsItemSelected(MenuItem item) {
+		switch (item.getItemId()) {
+			case android.R.id.home:
+				NavUtils.navigateUpFromSameTask(this);
+				return true;
+		}
+		return super.onOptionsItemSelected(item);
+	}
+}
